<resources>
    <string name="app_name">Proyecto</string>
    <string name="login">Inicio de Sesión</string>
    <string name="cancel">Cancelar</string>
    <string name="log_in">Acceder</string>
    <string name="enter_the_email">Introduce el email</string>
    <string name="enter_the_password">Introduce la contraseña</string>
    <string name="register">Registrar</string>
    <string name="enter_your_name">Introduce tu nombre</string>
    <string name="required">Requerido</string>
    <string name="home">Inicio</string>
    <string name="favorites">Favoritos</string>
    <string name="sell">Vender</string>
    <string name="messages">Mensages</string>
    <string name="categories">Categorias</string>
    <string name="prod_name">Producto</string>
    <string name="nombre_vendedor">NOMBRE VENDEDOR</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="best_rated">Mejor Valorados</string>
    <string name="new_products">Recientes</string>
    <string name="category">Categoría</string>
    <string name="tag">Etiqueta</string>
    <string name="price">Precio</string>
    <string name="distance">Distancia</string>
    <string name="edit_account">Editar cuenta</string>
    <string name="settings">Configuración</string>
    <string name="about_us">Sobre nosotros</string>
    <string name="products">Productos</string>
    <string name="become_premium">Hacerse premium</string>
    <string name="sell_a_product">Vender un producto</string>
    <string name="add_images">Añade imagenes</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="chat">Chat</string>
    <string name="description_of_the_product">Descripcion del producto</string>
    <string name="shipping_in_2_5_days">Envio de 2-5 dias</string>
    <string name="buy">Comprar</string>
    <string name="upload">Subir</string>
    <string name="antiquity">Antiguedad</string>
    <string name="my_profile">Mi Perfil</string>
    <string name="enter_your_location">Introduce tu localización</string>
    <string name="log_out">Log Out</string>
    <string name="enter_the_price">Introduce el precio</string>
    <string name="text_dialog">Te posiciona como vendedor estrella para así salir como vendedor destacado y aumentar la posibilidad de venta de tus productos</string>
    <string name="title_activity_settings">Settings</string>
    <string name="modify_user">Modificar Usuario</string>
    <string name="location">Poblacion</string>
    <string name="password">Contraseña</string>
    <string name="update">Actualizar</string>
    <string name="user_profile">Perfil del usuario</string>
    <string name="choose_the_language">Elige el idioma</string>
    <string name="change_the_app_language">Cambiar el idioma de la app</string>
    <string name="choose_the_font">Elige el estilo</string>
    <string name="change_the_font_for_the_app">Cambiar la letra de la app</string>

</resources>