<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_settings"
        app:title="@string/settings">

        <ListPreference
            app:dialogTitle="@string/choose_the_language"
            app:entries="@array/language"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/change_the_app_language"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:dialogTitle="@string/choose_the_font"
            app:entries="@array/fonts"
            app:entryValues="@array/font_values"
            app:key="font"
            app:title="@string/change_the_font_for_the_app"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
