<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CategoryActivity">

    <LinearLayout
        android:id="@+id/iconBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp">

        </TextView>


    </LinearLayout>

    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@+id/iconBar"
        app:layout_constraintStart_toStartOf="parent"
        android:iconifiedByDefault="false"
        android:searchHintIcon="@null"
        android:queryHint="Search..."
        android:focusable="false"
        android:closeIcon="@drawable/ic_close"
        android:searchIcon="@drawable/ic_search"
        android:background="@drawable/ic_searchbar"/>


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTags"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            app:chipIcon="@drawable/ic_tag"
            app:closeIconVisible="true"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPrice"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDistance"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recycler_products"
        app:layout_constraintTop_toBottomOf="@+id/filters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:scrollbars="vertical"
        app:spanCount="2"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_product"/>

</androidx.constraintlayout.widget.ConstraintLayout>